--- a/prow/cluster/plank_rbac.yaml
+++ b/prow/cluster/plank_rbac.yaml
@@ -2,42 +2,64 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   namespace: ${NAMESPACE}
-  name: "hook"
+  name: "plank"
 ---
 kind: Role
 apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
   namespace: ${NAMESPACE}
-  name: "hook"
+  name: "plank"
 rules:
   - apiGroups:
       - "prow.k8s.io"
     resources:
       - prowjobs
     verbs:
-      - create
       - get
+      - create
       - list
       - update
       - watch
+      - patch
+---
+kind: Role
+apiVersion: rbac.authorization.k8s.io/v1beta1
+metadata:
+  namespace: ${WORKER_NS}
+  name: "plank"
+rules:
   - apiGroups:
       - ""
     resources:
-      - configmaps
+      - pods
     verbs:
       - create
-      - get
-      - update
+      - delete
+      - list
 ---
 kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
   namespace: ${NAMESPACE}
-  name: "hook"
+  name: "plank"
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
-  name: "hook"
+  name: "plank"
 subjects:
 - kind: ServiceAccount
-  name: "hook"
+  name: "plank"
+---
+kind: RoleBinding
+apiVersion: rbac.authorization.k8s.io/v1beta1
+metadata:
+  namespace: ${WORKER_NS}
+  name: "plank"
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: Role
+  name: "plank"
+subjects:
+- kind: ServiceAccount
+  name: "plank"
+  namespace: ${NAMESPACE}
