--- a/prow/config/deck.yaml
+++ b/prow/config/deck.yaml
@@ -1,7 +1,7 @@
 deck:
   spyglass:
     size_limit: 500000000  # 500 MB
-    gcs_browser_prefix: https://gcsweb.maistra.io/gcs/
+    gcs_browser_prefix: https://patchset.io/gcs/
     lenses:
     - lens:
         name: metadata
