--- a/prow/config/plank.yaml
+++ b/prow/config/plank.yaml
@@ -1,6 +1,6 @@
 plank:
   job_url_prefix_config:
-    '*': "https://prow.maistra.io/view/"
+    '*': "https://patchset.io/view/"
   default_decoration_configs:
     '*':
       timeout: 4h
@@ -12,7 +12,7 @@ plank:
         sidecar: "gcr.io/k8s-prow/sidecar:v20211019-5763223177"
       gcs_configuration:
         path_strategy: explicit
-        bucket: "maistra-prow-testing"
+        bucket: "patchset-demo"
       gcs_credentials_secret: "gcs-credentials"
   pod_unscheduled_timeout: 6h
   pod_pending_timeout: 6h
