--- a/prow/plugins.yaml
+++ b/prow/plugins.yaml
@@ -1,141 +1,10 @@
 plugins:
-  maistra/maistra.github.io:
+  bartoszmajsak-test/template-golang:
     plugins:
     - size
     - trigger
-    - hold
-    - wip
-  maistra-prow-testing:
-    plugins:
-    - size
-    - trigger
-    - hold
-    - wip
-  maistra/api:
-    plugins:
-    - size
-    - trigger
-    - hold
-    - wip
-  maistra/istio-operator:
-    plugins:
-    - size
-    - trigger
-    - hold
-    - wip
-  maistra/test-infra:
-    plugins:
-    - size
-    - trigger
-    - hold
-    - wip
-  maistra/istio:
-    plugins:
-    - size
-    - trigger
-    - hold
-    - wip
-  maistra/xns-informer:
-    plugins:
-    - size
-    - trigger
-    - hold
-    - wip
-  maistra/ior:
-    plugins:
-    - size
-    - trigger
-    - hold
-    - wip
-  maistra/rpm-common:
-    plugins:
-    - size
-    - trigger
-    - hold
-    - wip
-  maistra/rpm-ior:
-    plugins:
-    - size
-    - trigger
-    - hold
-    - wip
-  maistra/rpm-istio-operator:
-    plugins:
-    - size
-    - trigger
-    - hold
-    - wip
-  maistra/proxy:
-    plugins:
-    - size
-    - trigger
-    - hold
-    - wip
-  maistra/envoy:
-    plugins:
-    - size
-    - trigger
-    - hold
-    - wip
-  maistra/header-append-filter:
-    plugins:
-    - size
-    - trigger
-    - hold
-    - wip
-  maistra/istio-must-gather:
-    plugins:
-    - size
-    - trigger
-    - hold
-    - wip
-  maistra/olm-metadata:
-    plugins:
-    - size
-    - trigger
-    - hold
-    - wip
-  maistra/istio-images-centos:
-    plugins:
-    - size
-    - trigger
-    - hold
-    - wip
-  maistra/istio-cni:
-    plugins:
-    - size
-    - trigger
-    - hold
-    - wip
-  maistra/prometheus:
-    plugins:
-    - size
-    - trigger
-    - hold
-    - wip
-  maistra/rpms:
-    plugins:
-    - size
-    - trigger
-    - hold
-    - wip
 
-  dgn/oidc-filter:
-    plugins:
-    - size
-    - trigger
-    - hold
-    - wip
-
-external_plugins:
-  maistra:
-  - name: cherrypicker
-    events:
-      - issue_comment
-      - pull_request
-      
-  maistra-prow-testing:
-  - name: cherrypicker
-    events:
-      - issue_comment
-      - pull_request
+triggers:
+  - repos:
+    - bartoszmajsak-test
+    only_org_members: true
